--- a/index.html
+++ b/index.html
@@ -808,6 +808,89 @@
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- ======> / Horizontal Rule <====== -->
+    <!-- ======> Footer <====== -->
+    <!-- <mj-include path="components/footer.mjml" /> -->
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#11111A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="background:#11111A;background-color:#11111A;margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#11111A;background-color:#11111A;width:100%;">
+        <tbody>
+          <tr>
+            <td style="direction:ltr;font-size:0px;padding:0;text-align:center;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                  <tbody>
+                    <tr>
+                      <td style="vertical-align:top;padding:45px 0 30px;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                          <tbody>
+                            <tr>
+                              <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
+                                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                  <tbody>
+                                    <tr>
+                                      <td style="width:21px;">
+                                        <a href="#" target="_blank">
+                                          <img alt="On" height="auto" src="https://i.ibb.co/XbTW9YT/on-logo-blk.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="21" />
+                                        </a>
+                                      </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td align="center" style="font-size:0px;padding:0;padding-top:45px;word-break:break-word;">
+                                <div style="font-family:Arial;font-size:13px;line-height:1;text-align:center;color:#000000;"><a href="#" style="padding: 0 7px;">
+                                    <img src="https://i.ibb.co/pRrm6Wt/facebook.png" alt="Facebook" style="width: 12px; vertical-align: middle;">
+                                  </a>
+                                  <a href="#" style="padding: 0 7px;">
+                                    <img src="https://i.ibb.co/pJgC5k1/instagram.png" alt="Instagram" style="width: 21px; vertical-align: middle;">
+                                  </a>
+                                  <a href="#" style="padding: 0 7px;">
+                                    <img src="https://i.ibb.co/cL7b0pG/strava.png" alt="Strava" style="width: 21px; vertical-align: middle;">
+                                  </a>
+                                  <a href="#" style="padding: 0 7px;">
+                                    <img src="https://i.ibb.co/tQZKVV1/youtube.png" alt="Youtube" style="width: 21px; vertical-align: middle;">
+                                  </a>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td align="center" style="font-size:0px;padding:0;padding-top:30px;word-break:break-word;">
+                                <div style="font-family:Arial;font-size:13px;line-height:1;text-align:center;color:#000000;">
+                                  <p>
+                                    <a href="#" style="font-size: 13px; text-transform: uppercase; line-height: 24px; letter-spacing: 1px; color: #ffffff;">View in Browser</a>
+                                  </p>
+                                  <p>
+                                    <a href="#" style="font-size: 13px; text-transform: uppercase; line-height: 24px; letter-spacing: 1px; color: #ffffff;">Manage Your Preferences</a>
+                                  </p>
+                                  <p>
+                                    <a href="#" style="font-size: 13px; text-transform: uppercase; line-height: 24px; letter-spacing: 1px; color: #ffffff;">Unsubscribe</a>
+                                  </p>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td align="center" style="font-size:0px;padding:0;padding-top:45px;word-break:break-word;">
+                                <div style="font-family:Arial;font-size:11px;line-height:1;text-align:center;color:#ffffff;">© 2022</div>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--[if mso | IE]></td></tr></table><![endif]-->
+    <!-- ======> / Footer <====== -->
   </div>
 </body>
 
