Padding adjusted on hero CTA btns

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
       .prod-copy-pad>table>tbody>tr>td {
         padding-top: 0 !important;
       }
+
+      .cta-btn {
+        width: 150px !important;
+      }
     }
 
   </style>
@@ -298,28 +302,32 @@
         <tbody>
           <tr>
             <td style="direction:ltr;font-size:0px;padding:0;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                  <tbody>
-                    <tr>
-                      <td style="vertical-align:top;padding:0;">
-                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                          <tbody>
-                            <tr>
-                              <td align="center" style="font-size:0px;padding:30px 0 45px;word-break:break-word;">
-                                <div style="font-family:Arial;font-size:13px;line-height:1;text-align:center;color:#000000;"><a href="#" style="display: inline-block; font-size: 18px; letter-spacing: 1px; color: #ffffff; border: 1px solid #ffffff; padding: 15px 0; width: 180px;">Get men's</a>
-                                  <span>&nbsp;</span>
-                                  <a href="#" style="display: inline-block; font-size: 18px; letter-spacing: 1px; color: #ffffff; border: 1px solid #ffffff; padding: 15px 0; width: 180px;">Get women's</a>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:600px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;">
+                <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:600px;" ><![endif]-->
+                <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                    <tbody>
+                      <tr>
+                        <td style="vertical-align:top;padding:0;">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                            <tbody>
+                              <tr>
+                                <td align="center" style="font-size:0px;padding:30px 0 45px;word-break:break-word;">
+                                  <div style="font-family:Arial;font-size:13px;line-height:1;text-align:center;color:#000000;"><a class="cta-btn" href="#" style="display: inline-block; font-size: 18px; letter-spacing: 1px; color: #ffffff; border: 1px solid #ffffff; padding: 15px 0; width: 180px;">Get men's</a>
+                                    <span>&nbsp;</span>
+                                    <a class="cta-btn" href="#" style="display: inline-block; font-size: 18px; letter-spacing: 1px; color: #ffffff; border: 1px solid #ffffff; padding: 15px 0; width: 180px;">Get women's</a>
+                                  </div>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table><![endif]-->
               </div>
               <!--[if mso | IE]></td></tr></table><![endif]-->
             </td>
