--- a/index.html
+++ b/index.html
@@ -135,8 +135,21 @@
       border: 0;
     }
 
+    .hero>table>tbody>tr>td {
+      background-image: url('https://i.ibb.co/Bs1GwqP/on-hero.gif') !important;
+      background-size: cover !important;
+      background-position: center !important;
+      background-repeat: no-repeat !important;
+      height: 675px !important;
+      cursor: pointer !important;
+    }
+
     /* ======> Mobile <====== */
     @media only screen and (max-width: 599.8px) {
+      .hero>table>tbody>tr>td {
+        height: 500px !important;
+      }
+
       .prod-img>table>tbody>tr>td {
         width: 100% !important;
       }
@@ -172,12 +185,12 @@
         <tbody>
           <tr>
             <td style="direction:ltr;font-size:0px;padding:0;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="hero-outlook" style="vertical-align:top;width:600px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix hero" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                   <tbody>
                     <tr>
-                      <td style="vertical-align:top;padding:15px 0;">
+                      <td style="vertical-align:top;padding:21px 0;">
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                           <tbody>
                             <tr>
@@ -211,49 +224,11 @@
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- ======> / Header <====== -->
     <!-- ======> Hero <====== -->
-    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#11111A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="background:#11111A;background-color:#11111A;margin:0px auto;max-width:600px;">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#11111A;background-color:#11111A;width:100%;">
-        <tbody>
-          <tr>
-            <td style="direction:ltr;font-size:0px;padding:0;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                  <tbody>
-                    <tr>
-                      <td style="vertical-align:top;padding:0;">
-                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                          <tbody>
-                            <tr>
-                              <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
-                                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
-                                  <tbody>
-                                    <tr>
-                                      <td style="width:600px;">
-                                        <a href="#" target="_blank">
-                                          <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/Bs1GwqP/on-hero.gif" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600" />
-                                        </a>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!--[if mso | IE]></td></tr></table><![endif]-->
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!--[if mso | IE]></td></tr></table><![endif]-->
+    <!-- <mj-section background-color="#11111A">
+      <mj-column>
+        <mj-image href="#" src="https://i.ibb.co/Bs1GwqP/on-hero.gif" alt="Cloud Ultra" />
+      </mj-column>
+    </mj-section> -->
     <!-- ======> / Hero <====== -->
     <!-- ======> Hero Copy <====== -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#11111A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
@@ -399,7 +374,9 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:258px;">
-                                        <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/DbP3sYg/cloud-ultra-1.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="258" />
+                                        <a href="#" target="_blank">
+                                          <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/DbP3sYg/cloud-ultra-1.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="258" />
+                                        </a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -508,7 +485,9 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:258px;">
-                                        <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/J3RSWZd/cloud-ultra-2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="258" />
+                                        <a href="#" target="_blank">
+                                          <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/J3RSWZd/cloud-ultra-2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="258" />
+                                        </a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -617,7 +596,9 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:258px;">
-                                        <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/b6MBM2z/cloud-ultra-3.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="258" />
+                                        <a href="#" target="_blank">
+                                          <img alt="Cloud Ultra" height="auto" src="https://i.ibb.co/b6MBM2z/cloud-ultra-3.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="258" />
+                                        </a>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -757,7 +738,7 @@
                           <tbody>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
-                                <div style="font-family:Arial;font-size:14px;letter-spacing:1px;line-height:1;text-align:center;text-transform:uppercase;color:#ffffff;">Free Exchange and Returns</div>
+                                <div style="font-family:Arial;font-size:14px;letter-spacing:1px;line-height:1;text-align:center;text-transform:uppercase;color:#ffffff;"><a href="#" style="color: #ffffff;">Free Exchange and Returns</a></div>
                               </td>
                             </tr>
                           </tbody>
@@ -829,7 +810,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                   <tbody>
                     <tr>
-                      <td style="vertical-align:top;padding:45px 0 30px;">
+                      <td style="vertical-align:top;padding:45px 0;">
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                           <tbody>
                             <tr>
